--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/parts.css">
   <script type="text/javascript" src="components/loader.js"></script>
   <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/milkcocoa.js"></script>
   <script type="text/javascript" src="js/common.js"></script>
   <script type="text/javascript" src="js/fungo.js"></script>
 
