--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/parts.css">
-  <script type="text/javascript" src="components/loader.js"></script>
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/milkcocoa.js"></script>
   <script type="text/javascript" src="js/common.js"></script>
   <script type="text/javascript" src="js/fungo.js"></script>
-
 </head>
 <body>
 
 <header>
-  <h1><a href="/"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"viewBox="0 0 461.23 69.564" style="enable-background:new 0 0 461.23 69.564;" xml:space="preserve">
+  <h1><a href="/"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 461.23 69.564" style="enable-background:new 0 0 461.23 69.564;" xml:space="preserve">
   <g>
 		<path style="fill:#FFFFFF;" d="M120.169,21.569c1.262,1.267,1.986,2.622,2.168,4.065c0.178,1.267-0.271,2.168-1.354,2.71
 			c-1.448,0.364-2.439-0.089-2.981-1.355c-1.809-4.154-5.603-6.233-11.383-6.233c-4.702,0-7.954,0.906-9.757,2.71
@@ -262,7 +260,6 @@
         <p>万が一、不具合や「出題内容がおかしい」などありましたら、下記のお問い合わせ先へご連絡ください。</p>
       </dd>
     </dl>
-    </dl>
   </li>
 </ul>
 <h2>その他</h2>
@@ -280,13 +277,12 @@
     <p>符計算の力はつきましたか？ときどき、復習に使っていただけると嬉しいです。</p>
     <p>ぜひ感想をお寄せください。</p>
     <ul>
-      <li><button id="rating"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <li><button id="rating"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    viewBox="0 0 273.39 222.178" style="enable-background:new 0 0 273.39 222.178;" xml:space="preserve">
 <polygon style="fill:#EDD058;" points="101.502,74.857 136.856,2.492 172.789,74.571 252.538,85.832 195.091,142.281 
 	209.024,221.606 137.586,184.414 66.45,222.178 79.746,142.744 21.847,86.759 "/>
 </svg>評価する</button></li>
-      <li><button id="tweet"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-   viewBox="0 0 273.39 222.178" style="enable-background:new 0 0 273.39 222.178;" xml:space="preserve">
+      <li><button id="tweet"><svg version="1.1"  xmlns="http://www.w3.org/2000/svg"  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 273.39 222.178" style="enable-background:new 0 0 273.39 222.178;" xml:space="preserve">
 <path style="fill:#55ACEE;" d="M273.39,26.301c-10.059,4.461-20.868,7.477-32.215,8.832c11.581-6.941,20.475-17.934,24.662-31.031
 	C255,10.529,242.996,15.197,230.22,17.713C219.988,6.812,205.411,0,189.279,0c-30.978,0-56.091,25.113-56.091,56.088
 	c0,4.397,0.496,8.677,1.452,12.782C88.025,66.531,46.696,44.201,19.032,10.267c-4.828,8.284-7.594,17.919-7.594,28.198
